--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-react-hw-01-components",
   "version": "0.1.0",
   "private": true,
-  "homepage": "hhttps://artemlytvynenkoa.github.io/goit-react-hw-01-components/",
+  "homepage": "https://artemlytvynenkoa.github.io/goit-react-hw-02-phonebook/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
